List of changes: Docs: API documentation no longer requires a RequestBody when receiving DELETE requests, this was removed because it is a bad practice. Refactor: isAdmin middleware, now it can get the user's email from the RequestBody or the Params Add: Param <email> two DELETE routes to avoid getting the email from the RequestBody.
